; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/qcom/venus/extr_hfi_msgs.c_event_sys_error.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/qcom/venus/extr_hfi_msgs.c_event_sys_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.venus_core = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 (%struct.venus_core*, i32)* }
%struct.hfi_msg_event_notify_pkt = type { i32, i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [47 x i8] c"sys error (session id:%x, data1:%x, data2:%x)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.venus_core*, i32, %struct.hfi_msg_event_notify_pkt*)* @event_sys_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @event_sys_error(%struct.venus_core* %0, i32 %1, %struct.hfi_msg_event_notify_pkt* %2) #0 {
  %4 = alloca %struct.venus_core*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.hfi_msg_event_notify_pkt*, align 8
  store %struct.venus_core* %0, %struct.venus_core** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.hfi_msg_event_notify_pkt* %2, %struct.hfi_msg_event_notify_pkt** %6, align 8
  %7 = load %struct.hfi_msg_event_notify_pkt*, %struct.hfi_msg_event_notify_pkt** %6, align 8
  %8 = icmp ne %struct.hfi_msg_event_notify_pkt* %7, null
  br i1 %8, label %9, label %24

9:                                                ; preds = %3
  %10 = load %struct.venus_core*, %struct.venus_core** %4, align 8
  %11 = getelementptr inbounds %struct.venus_core, %struct.venus_core* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.hfi_msg_event_notify_pkt*, %struct.hfi_msg_event_notify_pkt** %6, align 8
  %14 = getelementptr inbounds %struct.hfi_msg_event_notify_pkt, %struct.hfi_msg_event_notify_pkt* %13, i32 0, i32 2
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.hfi_msg_event_notify_pkt*, %struct.hfi_msg_event_notify_pkt** %6, align 8
  %18 = getelementptr inbounds %struct.hfi_msg_event_notify_pkt, %struct.hfi_msg_event_notify_pkt* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.hfi_msg_event_notify_pkt*, %struct.hfi_msg_event_notify_pkt** %6, align 8
  %21 = getelementptr inbounds %struct.hfi_msg_event_notify_pkt, %struct.hfi_msg_event_notify_pkt* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @dev_dbg(i32 %12, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %19, i32 %22)
  br label %24

24:                                               ; preds = %9, %3
  %25 = load %struct.venus_core*, %struct.venus_core** %4, align 8
  %26 = getelementptr inbounds %struct.venus_core, %struct.venus_core* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32 (%struct.venus_core*, i32)*, i32 (%struct.venus_core*, i32)** %28, align 8
  %30 = load %struct.venus_core*, %struct.venus_core** %4, align 8
  %31 = load i32, i32* %5, align 4
  %32 = call i32 %29(%struct.venus_core* %30, i32 %31)
  ret void
}

declare dso_local i32 @dev_dbg(i32, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
